<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content" android:id="@+id/shoppingRow"
                                                   android:paddingEnd="8dp"
                                                   android:paddingStart="8dp" android:paddingTop="8dp"
                                                   android:background="@android:color/white"
                                                   android:layout_marginBottom="8dp" android:layout_marginTop="8dp">

    <TextView
            android:text="@string/shopping_row_replace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dateCreated"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/color_7f8c8d"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionNote"/>
    <TextView
            android:text="@string/shopping_row_replace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionNote"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/color_000000"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"/>
    <TextView
            android:text="@string/shopping_row_replace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/color_7f8c8d"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dateCreated"/>
    <Button
            android:text="@string/shopping_row_btn_Itens"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/btnItens"
            android:drawableStart="@drawable/ic_shopping_basket_black_24dp" android:padding="10dp"
            android:textColor="@color/color_2b53a0" android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/total"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/shopping_row_btn_remover"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/btnRemove"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_delete_forever_black_24dp" android:textColor="@color/color_e50064"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintTop_toTopOf="@+id/btnEdit" app:layout_constraintBottom_toBottomOf="@+id/btnEdit"/>
    <Button
            android:text="@string/shopping_row_btn_editar"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/btnEdit"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_mode_edit_black_24dp"
            android:textColor="@color/color_f39201" android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnItens"
            app:layout_constraintTop_toTopOf="@+id/btnItens" app:layout_constraintBottom_toBottomOf="@+id/btnItens"/>
</androidx.constraintlayout.widget.ConstraintLayout>